logging/kibana/kibana-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
  namespace: logging
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
  - port: 5601
    targetPort: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.15.2
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
        volumeMounts:
        - name: kibana-config-volume
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
      - name: create-data-view
        image: curlimages/curl:latest
        command: ['sh', '-c', 'until nc -z kibana 5601; do sleep 1; done; sleep 20; curl -X POST "http://kibana:5601/kibana/api/data_views/data_view" -H "kbn-xsrf: true" -H "Content-Type: application/json" -d "{\"data_view\": {\"name\": \"kubernetes\", \"title\": \"logstash-*\"}}"; while true; do sleep 3600; done;']
      volumes:
      - name: kibana-config-volume
        configMap:
          name: kibana-config
